@@ -117,6 +117,7 @@ set g_maxXP -1
 set g_damageXP 0
 set g_damageXPLevel 50
 set g_weapons 0
+set g_mg42 0
 set g_goomba 0
 set g_goombaFlags 0
 set g_spinCorpse 0
