@@ -49,7 +49,7 @@ dt {
 <td><a href="#g_spawnInvulFair">g_spawnInvulFair</a></td>
 <td><a href="#g_chargeType">g_chargeType</a></td>
 <td><a href="#g_flushItems">g_flushItems</a></td>
-<td><a href="#g_weapons">g_weapons</a></td>
+<td><a href="#g_mg42">g_mg42</a></td>
 </tr>
 </table>
 
@@ -556,8 +556,18 @@ windows and bunker slits.
 <dt> 2048
 <dd> Knifes will always gib a body (not a player, use
 <a href="#g_dmgKnife">g_dmgKnife</a> instead if you want that)
-<dt> 4096
+</dl>
+<p>Default is 0</p>
+
+<a name="g_mg42" /></a>
+<dt>g_mg42 [bitmask]
+<dd>
+<p>This is a bitflag cvar that currently supports the following flags:</p>
+<dl>
+<dt> 1
 <dd>mg's can make headshots
+<dt> 2
+<dd>mg's can reload when clip is not empty
 </dl>
 <p>Default is 0</p>
 
