@@ -1017,7 +1017,7 @@ qboolean IsHeadShotWeapon (int mod) {
 					|| mod == MOD_MACHINEGUN
 					|| mod == MOD_BROWNING
 					|| mod == MOD_MOBILE_MG42)
-					&& (g_weapons.integer & WPF_MG_HEADSHOT))
+					&& (g_mg42.integer & MG_HEADSHOT))
 			)
 		return qtrue;
 
